--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 SECRET_KEY='django-insecure-ygm9^gkcdnv=j&hwdp%bcm33&nd_%m^jt3ip*&mqh5b7gf4*(o'
 DEBUG=True
-ALLOWED_HOSTS=localhost
+ALLOWED_HOSTS='127.0.0.1'
